test_regress/t/t_implements.out
%Error-UNSUPPORTED: t/t_implements.v:7:11: Unsupported: interface classes
    7 | interface class Icempty;
      |           ^~~~~
                    ... For error description see https://verilator.org/warn/UNSUPPORTED?v=latest
%Error-UNSUPPORTED: t/t_implements.v:10:11: Unsupported: interface classes
   10 | interface class Icls1;
      |           ^~~~~
%Error-UNSUPPORTED: t/t_implements.v:17:11: Unsupported: interface classes
   17 | interface class Iext1 extends Icls1;
      |           ^~~~~
%Error-UNSUPPORTED: t/t_implements.v:21:11: Unsupported: interface classes
   21 | interface class Icls2;
      |           ^~~~~
%Error: Exiting due to
